--- a/style.css
+++ b/style.css
@@ -54,7 +54,12 @@ aside{
 footer{
     background-color: rgb(216, 216, 216);
     width: 880px;
-    height: 50px;
+    height: 100px;
     margin: 20px auto;
     text-align: center;
+    font-size: medium;
+}
+
+.con1 p{
+    text-align: left;
 }
